# sparrow

./: CONTRIBUTORS.md  Cargo.toml  README.md  contributors.json
docs/client/: README.md  client.toml
docs/protocol/: README.md
docs/protocol/events/: alias_edit.md  msg_del.md  msg_edit.md  user_alias_edit.md  user_conn.md  user_disconn.md  user_register.md
docs/protocol/req_res/: alias_edit.md  connect.md  disconnect.md  msg_del.md  msg_edit.md  msg_fetch.md  msg_new.md
docs/server/: README.md  server.toml
docs/server/cli/: init.md  list.md  listen.md  run.md  start.md  stop.md
docs/server/runtime/: kick.md  leave.md  save.md  stop.md
protocol/: README.md  connect_push.json  connect_req.json  connect_res.json  disconnect_push.json  disconnect_req.json  disconnect_res.json  msg_delete_req.json  msg_delete_res.json  msg_fetch_req.json  msg_fetch_res.json  msg_send_push.json  msg_send_req.json  msg_send_res.json
protocol/events/: msg_new.md
src/: cli.rs  codes.rs  init.rs  levels.rs  main.rs  message.rs  parser.rs  request.rs  response.rs  server.rs  user.rs
src/methods/: connect.rs  disconnect.rs  mod.rs  msg_fetch.rs  msg_send.rs
