[package]
name = "sparrow"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.39.0", features = ["full"] }
anyhow = "1.0.79"
directories = "6.0.0"
uuid = { version = "1.16.0", features = ["v4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
toml = "0.7.4"
sled = "0.34.7"